fix(ci): fix integration test SEA file syntax
Avoid heredoc indentation issue by using single-line echo command.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -219,12 +219,7 @@ jobs:
         run: |
           # Create a sample SEA file
           tmpdir=$(mktemp -d)
-          cat > "$tmpdir/test.sea" <<'EOF'
-          Entity "Warehouse" {
-            name: String
-            location: String
-          }
-          EOF
+          echo 'Entity "Warehouse" { name: String, location: String }' > "$tmpdir/test.sea"
 
           # Verify CLI executes and validates the file
           ./target/debug/sea validate "$tmpdir/test.sea" && echo "✓ SEA validation working correctly"
