--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -219,7 +219,7 @@ jobs:
         run: |
           # Create a sample SEA file
           tmpdir=$(mktemp -d)
-          echo 'Entity "Warehouse" { name: String, location: String }' > "$tmpdir/test.sea"
+          echo 'Entity "Warehouse"' > "$tmpdir/test.sea"
 
           # Verify CLI executes and validates the file
           ./target/debug/sea validate "$tmpdir/test.sea" && echo "✓ SEA validation working correctly"
