--- a/bunfig.toml
+++ b/bunfig.toml
@@ -2,14 +2,10 @@
 # https://bun.sh/docs/runtime/bunfig
 
 [install]
-# Use hardlinks for faster installs
-hardlink = true
+# Use hoisted linker for faster installs (hardlink not supported)
+linker = "hoisted"
 
 [test]
 # We use Vitest instead of Bun's built-in test runner
 # Vitest is more feature-complete for this project's needs
 coverage = false
-
-[run]
-# Bun handles TypeScript natively
-silent = false
