--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   ],
   "devDependencies": {
     "@napi-rs/cli": "^2.18.0",
-    "@types/bun": "latest",
+    "@types/bun": "^1.1.15",
     "@types/node": "^20.19.25",
     "typescript": "^5.3.0",
     "vitest": "^4.0.10"
