--- a/.github/workflows/release-pypi.yml
+++ b/.github/workflows/release-pypi.yml
@@ -11,16 +11,25 @@ permissions:
 
 jobs:
   build-and-publish:
+    name: Publish Wheels (${{ matrix.os }}, ${{ matrix.target }})
     runs-on: ${{ matrix.os }}
     strategy:
+      fail-fast: false
       matrix:
         include:
+          # x86_64 targets
           - os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
-          - os: macos-latest
+          - os: macos-13
             target: x86_64-apple-darwin
           - os: windows-latest
             target: x86_64-pc-windows-msvc
+          # ARM targets
+          - os: macos-14
+            target: aarch64-apple-darwin
+          - os: ubuntu-latest
+            target: aarch64-unknown-linux-gnu
+            use_zig: true
     steps:
       - uses: actions/checkout@v4
 
@@ -43,7 +52,12 @@ jobs:
       - name: Install maturin
         run: pip install maturin==1.10.1
 
-      - name: Build and publish wheels
+      - name: Install Zig (for ARM Linux cross-compile)
+        if: matrix.use_zig == true
+        uses: mlugg/setup-zig@v1
+
+      - name: Build and publish wheels (native)
+        if: matrix.use_zig != true
         run: |
           maturin publish \
             --manifest-path sea-core/Cargo.toml \
@@ -51,5 +65,18 @@ jobs:
             --features python \
             --target ${{ matrix.target }} \
             --skip-existing
+        env:
+          MATURIN_PYPI_TOKEN: ${{ steps.secrets.outputs.pypi-api-token || secrets.PYPI_API_TOKEN }}
+
+      - name: Build and publish wheels (cross-compile with Zig)
+        if: matrix.use_zig == true
+        run: |
+          maturin publish \
+            --manifest-path sea-core/Cargo.toml \
+            --release \
+            --features python \
+            --target ${{ matrix.target }} \
+            --skip-existing \
+            --zig
         env:
           MATURIN_PYPI_TOKEN: ${{ steps.secrets.outputs.pypi-api-token || secrets.PYPI_API_TOKEN }}
