--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,7 +10,7 @@ permissions:
 
 env:
   CACHE_VERSION: v3
-  WASM_MAX_BYTES: "524288" # 512KB
+  WASM_MAX_BYTES: "2097152" # 2MB - harmonized with ci.yml
   CLI_MAX_BYTES: "52428800" # 50MB
   CLI_ARTIFACT_MAX_BYTES: "73400320" # 70MB
 
@@ -18,14 +18,22 @@ jobs:
   build-release:
     name: Build Release (${{ matrix.target }})
     strategy:
+      fail-fast: false
       matrix:
         include:
+          # x86_64 targets
           - target: x86_64-unknown-linux-gnu
             os: ubuntu-latest
           - target: x86_64-apple-darwin
-            os: macos-latest
+            os: macos-13
           - target: x86_64-pc-windows-msvc
             os: windows-latest
+          # ARM targets
+          - target: aarch64-apple-darwin
+            os: macos-14  # Apple Silicon runner
+          - target: aarch64-unknown-linux-gnu
+            os: ubuntu-latest
+            use_cross: true
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
@@ -35,11 +43,21 @@ jobs:
         with:
           targets: ${{ matrix.target }}
 
+      - name: Install cross (for ARM Linux)
+        if: matrix.use_cross == true
+        run: cargo install cross --locked
+
       - name: Install just
         uses: extractions/setup-just@v2
 
-      - name: Build release binary
+      - name: Build release binary (native)
+        if: matrix.use_cross != true
         run: cargo build --release --target ${{ matrix.target }} --features cli
+        working-directory: sea-core
+
+      - name: Build release binary (cross-compile)
+        if: matrix.use_cross == true
+        run: cross build --release --target ${{ matrix.target }} --features cli
         working-directory: sea-core
 
       - name: Resolve CLI binary path
@@ -59,6 +77,7 @@ jobs:
           "CLI_BIN=$cliBin" >> $env:GITHUB_ENV
 
       - name: Verify CLI binary executes
+        if: matrix.use_cross != true
         run: just ci-verify-binary "${{ env.CLI_BIN }}"
 
       - name: Check CLI binary size
@@ -77,6 +96,7 @@ jobs:
         shell: bash
 
       - name: Verify packaged archive
+        if: matrix.use_cross != true
         run: just ci-verify-package "${{ env.ARCHIVE_PATH }}" "sea"
 
       - name: Check packaged artifact size
@@ -91,14 +111,22 @@ jobs:
   build-python-wheels:
     name: Build Python Wheels (${{ matrix.target }})
     strategy:
+      fail-fast: false
       matrix:
         include:
+          # x86_64 targets
           - target: x86_64-unknown-linux-gnu
             os: ubuntu-latest
           - target: x86_64-apple-darwin
-            os: macos-latest
+            os: macos-13
           - target: x86_64-pc-windows-msvc
             os: windows-latest
+          # ARM targets
+          - target: aarch64-apple-darwin
+            os: macos-14
+          - target: aarch64-unknown-linux-gnu
+            os: ubuntu-latest
+            use_zig: true
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
@@ -116,8 +144,18 @@ jobs:
       - name: Install maturin
         run: pip install maturin==1.10.1
 
-      - name: Build wheels
+      - name: Install Zig (for ARM Linux cross-compile)
+        if: matrix.use_zig == true
+        uses: mlugg/setup-zig@v1
+
+      - name: Build wheels (native)
+        if: matrix.use_zig != true
         run: maturin build --release --features python --target ${{ matrix.target }} --out dist
+        working-directory: sea-core
+
+      - name: Build wheels (cross-compile with Zig)
+        if: matrix.use_zig == true
+        run: maturin build --release --features python --target ${{ matrix.target }} --out dist --zig
         working-directory: sea-core
 
       - name: Upload wheels
@@ -129,7 +167,6 @@ jobs:
   build-wasm-release:
     name: Build WASM Release
     runs-on: ubuntu-latest
-    needs: build-release
     steps:
       - uses: actions/checkout@v4
 
@@ -169,7 +206,7 @@ jobs:
       - name: Package WASM artifacts
         run: |
           cd sea-core/pkg
-          tar czf ../../sea-core-wasm.tar.gz * || true
+          tar czf ../../sea-core-wasm.tar.gz *
 
       - name: Upload WASM artifacts
         uses: actions/upload-artifact@v4
@@ -179,7 +216,7 @@ jobs:
 
   create-release:
     name: Create GitHub Release
-    needs: [build-release, build-python-wheels]
+    needs: [build-release, build-python-wheels, build-wasm-release]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -189,12 +226,15 @@ jobs:
         with:
           path: artifacts
 
+      - name: List artifacts
+        run: find artifacts -type f | head -50
+
       - name: Create Release
         uses: softprops/action-gh-release@v1
         with:
           files: artifacts/**/*
           draft: false
-          prerelease: ${{ contains(github.ref, 'alpha') || contains(github.ref, 'beta') }}
+          prerelease: ${{ contains(github.ref, 'alpha') || contains(github.ref, 'beta') || contains(github.ref, 'rc') }}
           generate_release_notes: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
