--- a/.github/workflows/prepare-release.yml
+++ b/.github/workflows/prepare-release.yml
@@ -50,7 +50,7 @@ jobs:
           BUMP="${{ github.event.inputs.version_bump }}"
           PRERELEASE="${{ github.event.inputs.prerelease }}"
           
-          # Parse current version
+          # Parse current version (strip any existing pre-release suffix)
           IFS='.' read -r MAJOR MINOR PATCH <<< "${CURRENT%-*}"
           
           # Bump version based on type
@@ -86,30 +86,40 @@ jobs:
           NEW_VERSION="${{ steps.newversion.outputs.version }}"
           DATE=$(date +%Y-%m-%d)
           
-          # Create temp file with new entry
-          cat > /tmp/changelog_entry.md << EOF
-          ## [${NEW_VERSION}] - ${DATE}
+          # Build the new changelog entry
+          ENTRY="## [${NEW_VERSION}] - ${DATE}
 
-          ### Added
-          - (Add new features here)
+### Added
+- (Add new features here)
 
-          ### Changed
-          - (Add changes here)
+### Changed
+- (Add changes here)
 
-          ### Fixed
-          - (Add bug fixes here)
+### Fixed
+- (Add bug fixes here)
 
-          EOF
+"
           
-          # Insert after the first "## " heading (keeping the header)
-          if grep -q "^## \[" CHANGELOG.md; then
-            sed -i "/^## \[/r /tmp/changelog_entry.md" CHANGELOG.md
-            # Remove duplicate (the first insertion)
-            sed -i "0,/^## \[${NEW_VERSION}\]/d" CHANGELOG.md
-            # Re-insert at correct position
-            sed -i "0,/^## \[/i\\
-          $(cat /tmp/changelog_entry.md)
-          " CHANGELOG.md 2>/dev/null || true
+          # Create updated changelog atomically
+          if [ -f CHANGELOG.md ]; then
+            # Find the first version heading and insert before it
+            if grep -n "^## \[" CHANGELOG.md | head -1 | cut -d: -f1 | read FIRST_VERSION_LINE; then
+              # Has existing version entries - insert after header
+              head -n $((FIRST_VERSION_LINE - 1)) CHANGELOG.md > /tmp/changelog_new.md
+              echo "$ENTRY" >> /tmp/changelog_new.md
+              tail -n +$FIRST_VERSION_LINE CHANGELOG.md >> /tmp/changelog_new.md
+            else
+              # No version entries yet - append to file
+              cat CHANGELOG.md > /tmp/changelog_new.md
+              echo "" >> /tmp/changelog_new.md
+              echo "$ENTRY" >> /tmp/changelog_new.md
+            fi
+            mv /tmp/changelog_new.md CHANGELOG.md
+          else
+            # Create new CHANGELOG.md
+            echo "# Changelog" > CHANGELOG.md
+            echo "" >> CHANGELOG.md
+            echo "$ENTRY" >> CHANGELOG.md
           fi
 
       - name: Create Pull Request
@@ -130,6 +140,7 @@ jobs:
             - [ ] Run `just all-tests` locally
             - [ ] Merge this PR
             - [ ] Create and push tag: `git tag v${{ steps.newversion.outputs.version }} && git push --tags`
+            - [ ] Create GitHub Release from the tag to trigger publishing
             
             ### Version Changes
             - **Previous**: ${{ steps.current.outputs.version }}
