--- a/.github/workflows/release-pypi.yml
+++ b/.github/workflows/release-pypi.yml
@@ -54,7 +54,9 @@ jobs:
 
       - name: Install Zig (for ARM Linux cross-compile)
         if: matrix.use_zig == true
-        uses: mlugg/setup-zig@v1
+        uses: goto-bus-stop/setup-zig@v2
+        with:
+          version: 0.11.0
 
       - name: Build and publish wheels (native)
         if: matrix.use_zig != true
