--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -146,7 +146,9 @@ jobs:
 
       - name: Install Zig (for ARM Linux cross-compile)
         if: matrix.use_zig == true
-        uses: mlugg/setup-zig@v1
+        uses: goto-bus-stop/setup-zig@v2
+        with:
+          version: 0.11.0
 
       - name: Build wheels (native)
         if: matrix.use_zig != true
