fix: add -i python3.11 flag to maturin for cross-compilation

--- a/.github/workflows/release-pypi.yml
+++ b/.github/workflows/release-pypi.yml
@@ -79,6 +79,7 @@ jobs:
             --features python \
             --target ${{ matrix.target }} \
             --skip-existing \
-            --zig
+            --zig \
+            -i python3.11
         env:
           MATURIN_PYPI_TOKEN: ${{ steps.secrets.outputs.pypi-api-token || secrets.PYPI_API_TOKEN }}
