--- a/pkg/package.json
+++ b/pkg/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@sprime01/sea-wasm",
+  "name": "sea-core",
   "type": "module",
   "collaborators": [
     "DomainForge Contributors"
   ],
   "description": "Rust core library implementing the SEA DSL primitives and validation engine.",
-  "version": "0.1.0",
+  "version": "0.4.0",
   "license": "MIT OR Apache-2.0",
   "repository": {
     "type": "git",
