--- a/pkg/package.json
+++ b/pkg/package.json
@@ -6,7 +6,7 @@
   ],
   "description": "Rust core library implementing the SEA DSL primitives and validation engine.",
   "version": "0.4.0",
-  "license": "MIT OR Apache-2.0",
+  "license": "Apache-2.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/GodSpeedAI/DomainForge"
