--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "napi"
   ],
   "author": "DomainForge Contributors",
-  "license": "MIT OR Apache-2.0",
+  "license": "Apache-2.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/GodSpeedAI/domainforge"
