feat: Introduce expression normalization and equivalence checking CLI and API.

--- a/docs/reference/sea-dsl-ai-cheatsheet.yaml
+++ b/docs/reference/sea-dsl-ai-cheatsheet.yaml
@@ -274,6 +274,21 @@ primitives:
             Entity "Customer" { "name": "customer_name" }
         }
 
+  Expression:
+    purpose: "Programmatic construction and normalization of policy expressions"
+    variants:
+      Basic: "Expression (AST wrapper)"
+      Normalized: "NormalizedExpression (canonical form with stable hash)"
+    factory_methods:
+      rust: "Expression::literal(), Expression::variable(), Expression::binary()..."
+      python: "Expression.literal(), Expression.variable(), Expression.binary()..."
+      typescript: "Expression.literal(), Expression.variable(), Expression.binary()..."
+      wasm: "Expression.literal(), Expression.variable(), Expression.binary()..."
+    normalization:
+      method: "expr.normalize() -> NormalizedExpression"
+      features: "Identity elimination, commutative sorting, idempotence, double negation"
+      hashing: "normalized.stable_hash() -> u64 (or hex string)"
+
 ---
 expressions:
   precedence:
@@ -789,6 +804,13 @@ cli_commands:
       calm: "sea import --format calm input.json > model.sea"
       sbvr: "sea import --format sbvr vocabulary.xmi > model.sea"
 
+  normalize:
+    usage: "sea normalize [--check-equiv OTHER_EXPR] [--json] <expression>"
+    purpose: "Normalize expressions and check equivalence"
+    examples:
+      basic: "sea normalize 'b AND a'"
+      check: "sea normalize 'a AND b' --check-equiv 'b AND a'"
+      json: "sea normalize 'true AND x' --json"
   json_output_summary:
     note: "Multiple commands support JSON output for tooling integration"
     commands:
