feat: encapsulate policy expression, switch to xxhash-rust for stable hashing, and enhance WASM/TS APIs and documentation

--- a/docs/reference/sea-dsl-ai-cheatsheet.yaml
+++ b/docs/reference/sea-dsl-ai-cheatsheet.yaml
@@ -287,7 +287,11 @@ primitives:
     normalization:
       method: "expr.normalize() -> NormalizedExpression"
       features: "Identity elimination, commutative sorting, idempotence, double negation"
-      hashing: "normalized.stable_hash() -> u64 (or hex string)"
+      hashing:
+        Rust: "u64 (raw integer)"
+        Python: "hex string (0x...)"
+        TypeScript: "hex string (0x...)"
+        WASM: "hex string (0x...)"
 
 ---
 expressions:
