--- a/sea-core/Cargo.toml
+++ b/sea-core/Cargo.toml
@@ -29,6 +29,7 @@ toml = { version = "0.8", features = ["parse"] }
 regex = "1.11"
 once_cell = "1.19"
 rustc-hash = "2.0"
+xxhash-rust = { version = "0.8", features = ["xxh64"] }
 pyo3 = { version = "0.24.1", features = ["extension-module"], optional = true }
 pythonize = { version = "0.24", optional = true }
 napi = { version = "2.16", features = ["async", "dyn-symbols"], optional = true }
