chore: address CodeRabbit review feedback
- Normalize: Re-apply absorption after flattening commutative operands
- Python: Validate timestamp inputs and support tuples in JSON conversion
- WASM: Use TryFrom for WindowSpec to prevent silent truncation
- CLI: Refactor normalize command for better testability and add tests
- TypeScript: Fix invalid test call in expression tests
- Docs: Standardize 'sea fmt' usage and add hash representation note

--- a/docs/reference/sea-dsl-ai-cheatsheet.yaml
+++ b/docs/reference/sea-dsl-ai-cheatsheet.yaml
@@ -292,6 +292,7 @@ primitives:
         Python: "hex string (0x...)"
         TypeScript: "hex string (0x...)"
         WASM: "hex string (0x...)"
+        note: "Hash values are consistent across bindings but representation differs (Rust: u64, others: hex string)"
 
 ---
 expressions:
@@ -837,7 +838,7 @@ cli_commands:
     requires: "Build with --features cli,shacl"
     note: "Validates KG structure conforms to SEA SHACL shapes"
 
-  format:
+  fmt:
     usage: "sea fmt <file.sea> [--out <output.sea>] [--check]"
     purpose: "Format SEA source code with consistent whitespace, indentation, and styling"
     status: "Fully implemented"
