--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,6 +33,7 @@ jobs:
       - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@stable
         with:
+          toolchain: stable
           components: rustfmt, clippy
         env:
           RUSTUP_MAX_RETRIES: 10
@@ -69,6 +70,7 @@ jobs:
       - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@stable
         with:
+          toolchain: stable
           targets: ${{ matrix.target }}
         env:
           RUSTUP_MAX_RETRIES: 10
@@ -132,6 +134,8 @@ jobs:
 
       - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@stable
+        with:
+          toolchain: stable
         env:
           RUSTUP_MAX_RETRIES: 10
 
@@ -171,6 +175,8 @@ jobs:
 
       - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@stable
+        with:
+          toolchain: stable
         env:
           RUSTUP_MAX_RETRIES: 10
 
@@ -202,6 +208,8 @@ jobs:
 
       - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@stable
+        with:
+          toolchain: stable
         env:
           RUSTUP_MAX_RETRIES: 10
 
@@ -244,6 +252,7 @@ jobs:
       - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@stable
         with:
+          toolchain: stable
           targets: wasm32-unknown-unknown
         env:
           RUSTUP_MAX_RETRIES: 10
@@ -305,6 +314,8 @@ jobs:
 
       - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@stable
+        with:
+          toolchain: stable
         env:
           RUSTUP_MAX_RETRIES: 10
 
