--- a/.github/workflows/release-crates.yml
+++ b/.github/workflows/release-crates.yml
@@ -23,6 +23,8 @@ jobs:
 
       - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@stable
+        with:
+          toolchain: stable
 
       - name: Publish sea-core to crates.io
         run: |
