--- a/.github/workflows/release-npm.yml
+++ b/.github/workflows/release-npm.yml
@@ -33,7 +33,7 @@ jobs:
           toolchain: stable
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install
 
       - name: Build napi package
         run: npm run build
@@ -74,7 +74,7 @@ jobs:
       - name: Build WASM package
         run: |
           cd sea-core
-          wasm-pack build --target web --release --features wasm --scope domainforge
+          wasm-pack build --target web --release --scope domainforge -- --features wasm
 
       - name: Publish WASM to npm
         run: |
