fix(ci): add shell: bash to PyPI release steps for Windows compatibility

--- a/.github/workflows/release-pypi.yml
+++ b/.github/workflows/release-pypi.yml
@@ -61,6 +61,7 @@ jobs:
 
       - name: Build and publish wheels (native)
         if: matrix.use_zig != true
+        shell: bash
         run: |
           python -m maturin publish \
             --manifest-path sea-core/Cargo.toml \
@@ -72,6 +73,7 @@ jobs:
 
       - name: Build and publish wheels (cross-compile with Zig)
         if: matrix.use_zig == true
+        shell: bash
         run: |
           python -m maturin publish \
             --manifest-path sea-core/Cargo.toml \
