--- a/sea-core/Cargo.toml
+++ b/sea-core/Cargo.toml
@@ -43,7 +43,7 @@ oxigraph = { version = "0.3", optional = true }
 clap = { version = "4.5", features = ["derive"], optional = true }
 colored = { version = "2.0", optional = true }
 anyhow = "1.0.100"
-
+schemars = { version = "0.8", features = ["chrono", "rust_decimal", "indexmap2"], optional = true }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 getrandom = { version = "0.3", features = ["wasm_js"] }
@@ -79,6 +79,8 @@ shacl = ["oxigraph"]
 formatting = ["icu_decimal", "icu_locid", "fixed_decimal"]
 cli = ["three_valued_logic", "clap", "colored"]
 three_valued_logic = []
+json-schema = ["schemars"]
+
 
 ## NOTE: Profiles are managed at the workspace root (Cargo.toml). Please
 ## update the workspace-level profiles in /Cargo.toml rather than in
