--- a/sea-core/Cargo.toml
+++ b/sea-core/Cargo.toml
@@ -18,7 +18,7 @@ icu_decimal = { version = "1.5", optional = true }
 icu_locid = { version = "1.5", optional = true }
 fixed_decimal = { version = "0.5", optional = true }
 rust_decimal = { version = "1.33", features = ["serde"] }
-chrono = { version = "0.4", features = ["serde"] }
+chrono = { version = "0.4", default-features = false, features = ["serde", "std", "wasmbind", "clock"] }
 pest = "2.7"
 pest_derive = "2.7"
 indexmap = { version = "2.0", features = ["serde"] }
@@ -26,7 +26,7 @@ log = "0.4.21"
 globset = "0.4"
 globwalk = "0.9"
 toml = { version = "0.8", features = ["parse"] }
-regex = "1.11"
+regex = { version = "1.11", default-features = false, features = ["std", "unicode"] }
 once_cell = "1.19"
 rustc-hash = "2.0"
 xxhash-rust = { version = "0.8", features = ["xxh64"] }
@@ -46,7 +46,7 @@ anyhow = "1.0.100"
 schemars = { version = "0.8", features = ["chrono", "rust_decimal", "indexmap2"], optional = true }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
-getrandom = { version = "0.3", features = ["wasm_js"] }
+getrandom = { version = "0.2", features = ["js"] }
 
 [dev-dependencies]
 proptest = { version = "1.0", features = ["std", "bit-set"] }
@@ -93,4 +93,4 @@ path = "src/bin/sea.rs"
 required-features = ["cli"]
 
 [package.metadata.wasm-pack.profile.release]
-wasm-opt = false
+wasm-opt = ["-Oz", "--enable-mutable-globals", "--enable-bulk-memory", "--enable-nontrapping-float-to-int", "--enable-sign-ext"]
